--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock, Paper, Scissors</title>
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>To play select Rock, Paper, or Scissors!</h1>
+    <div class="container">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+    </div>
+    <div class="outcome">
+        <h1 class="result">First to 5 wins!</h1>
+        <div class="score">
+
+                <h1>Computer Score: <div id="computer">0</id></h1>
+ 
+                <h1>Your Score: <div id="player">0</id></h1>
+
+        </div>
+    </div>
+
 </body>
 </html>
